--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,12 +30,12 @@
   line-height: 3;
   padding-bottom: 2.5px;
 }
-
+/*
 .vertical-menu .link-animation:hover {
   color: #4287f5;
   border-color: #4287f5;
 }
-
+*/
 .vertical-menu h2 {
 	font-family: "Playfair Display", Georgia, serif;
 	font-weight: 400;
@@ -81,11 +81,11 @@ hr {
   display:none;
   cursor: pointer;
 }
-
+/*
 .vertical-menu #close-btn:hover {
   color: #4287f5;  
 }
-
+*/
 #toggle-btn {
   color: black;
 	top: 0px;
@@ -94,11 +94,11 @@ hr {
   font-size: 22px;
   cursor:pointer
 }
-
+/*
 #toggle-btn:hover {
   color: #4287f5;
 }
-
+*/
 #email-link {
   text-decoration: none;
   color: #4287f5;
@@ -141,13 +141,13 @@ hr {
   font-weight: 300;
   cursor: pointer;
 }
-
+/*
 .course-info:hover {
   background-color: #4287f5 !important;
   color: white !important;
   border: 1px solid #4287f5 !important;
 }
-
+*/
 .fa-plus {
   position: absolute;
   font-size: 16px;
@@ -244,7 +244,11 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   color: #2f88f5;
   margin-right: 10px;
 }
-
+/*
+.nav-link:hover {
+  color: #2f48a3;
+}
+*/
 .card-body p {
   vertical-align: middle !important;
 }
@@ -354,6 +358,26 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding-right: 30px;
 }
 
+@media (hover: hover) {
+  .vertical-menu .link-animation:hover {
+   color: #4287f5;
+   border-color: #4287f5;
+ }
+ .vertical-menu #close-btn:hover {
+  color: #4287f5;  
+ }
+ #toggle-btn:hover {
+  color: #4287f5;
+ }
+ .course-info:hover {
+  background-color: #4287f5 !important;
+  color: white !important;
+  border: 1px solid #4287f5 !important;
+ }
+ .nav-link:hover {
+  color: #2f48a3;
+ }
+}
 
 @media screen and (max-width: 500px) {
   #bodyText h3 {
